fixed the weird spacing from header its mostly done now

--- a/public/styles.css
+++ b/public/styles.css
@@ -30,15 +30,23 @@
 
   .sol {
     width: 50px;
+    margin-top: 4px;
   }
 
 
   .header-txt {
     font-size: 50px;
-    margin: -5px;
+    margin: -2px;
+    margin-left: 14%;
     background-image: linear-gradient(90deg, #DC1FFF, #03E1FF, #00FFA3);
     -webkit-background-clip: text;
     color: transparent;
+  }
+
+  .menu-container{
+    display: flex;
+    flex-direction: column;
+    
   }
 
   .menu-trigger img{
@@ -48,16 +56,14 @@
     overflow: hidden;
     cursor: pointer;
     background-color: #fff;
+    margin-left: 70%;
   }
   
   .dropdown-menu{
-    position: absolute;
-    top: 100px;
-    right: 20px;
     background-color: #fff;
     border-radius: var(--border-radius);
-    padding: 10px 20px;
     width: 200px;
+
   }
   
   /* these next 2 are the bit important ones that animate it */
@@ -94,24 +100,10 @@
     font-weight: 400;
   }
   
-  .dropdown-menu ul li{
-    padding: 10px  0;
-    border-top: 1px solid rgba(0, 0, 0, 0.05);
-  }
-  
-  .dropdown-menu ul li:hover a{
-    color: rgb(212, 33, 9);
-    cursor: pointer;
-  }
-  
-  .dropdown-menu ul li:hover img{
-    opacity: 1;
-    cursor: pointer;
-  }
   
   .dropdownItem{
     display: flex;
-    margin: 10px auto;
+
   }
   
   .dropdownItem img{
@@ -129,17 +121,17 @@
 
 
   .homepage {
-    height: 100%;
-    width: 100%;
+    height: 49vh;
     display: flex;
     flex-wrap: wrap;
     padding: 10px;
   }
 
   .homeComponent {
-    height: 50%;
+    height: calc(100% - 60px);
     width: 49%;
     border: 1px solid black;
+    margin: auto;
   }
 
   
